style.css
/* Imports */
@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Saira&display=swap');

/* General Setup */
* {
  margin: 0;
  padding: 0;
}

html {
  font-size: 10px;
  scroll-behavior: smooth;
}

body {
  background-image: url(./imgs/sky.jpg);
  color: white;
}


/* Typography */
p, li, input, a, span {
  font-size: 2rem;
  font-family: 'Inconsolata', monospace;
}

h1, h2, h3 {
  font-family: 'Saira', sans-serif;
}

h1 {
  font-size: 5rem;
}

h2 {
  font-size: 3.5rem;
}

h3 {
  font-size: 2.8rem;
}


/* Header Layout */
header ul {
  list-style: none;
}

header a {
  font-size: 1.5rem;
  font-weight: 500;
  display: block;
  outline: none;
  padding: 20px;
  text-decoration: none;
  text-transform: uppercase;
  border-bottom: 2px solid white;
  text-align: center;
}

header a.logo {
  font-family: 'VT323', monospace;
  font-size: 3.5rem;
  font-weight: bold;
  text-transform: capitalize;
  padding: 70px 0;
}

header a:visited, 
header a:link, 
header a:focus {
  color: white;
}

header a:hover {
  color: darkgray;
}


/* Main Layout */
header,
main section {
  padding: 0 30px;
  margin: 0 auto;
  margin-bottom: 100px;
  max-width: 800px;
}

main h1 {
  margin-bottom: 10px;
}

main h2 {
  padding-top: 15px;
  padding-bottom: 25px;
	text-align: center;
}


/* Home Section */
#home .sec-contents {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-items: center;
	gap: 70px;
}

#home .sec-contents .home-left {
  flex: 1 400px;
}

#home .sec-contents .home-left h1 {
  font-size: 4rem;
}

  
#home .sec-contents .home-right .home-right-img {
	width: 250px;
	height: 250px;
  border-radius: 50%;
  border: 5px solid #42189a;
} 


/* Projects Section */
#projects .project-container {
  display: flex;
  flex-flow: row wrap;
  gap: 20px;
  justify-content: space-between;
}

#projects .project-container .project-div {
  border: 2px solid #42189a;
  border-radius: 3px;
  flex: 1;
  text-align: center;
  padding: 20px 30px;
}

#projects .project-container .project-div .project-img {
  width: 180px;
  height: 240px;
  border-radius: 3px;
  background-color: #42189a;
  display: inline-block;
  margin-bottom: 8px;
}
#projects .project-container .project-div .project-img.comp {
  background-image: url(./imgs/comp.png);
  background-size: cover;
  background-position: center;
}
#projects .project-container .project-div .project-img.wce {
  background-image: url(./imgs/wce.png);
  background-size: cover;
  background-position: center;
}
#projects .project-container .project-div .project-img.bakers {
  background-image: url(./imgs/bakers.png);
  background-size: cover;
  background-position: center;
}

#projects .project-container .project-div .project-img:hover {
  opacity: 0.7;
  cursor: pointer;
}

/* The Modal (background) */
#projects .project-container .project-div .modal-img {
  display: none;
  /* Hidden by default */
  position: fixed;
  /* Stay in place */
  z-index: 1;
  /* Sit on top */
  padding-top: 200px;
  /* Location of the box */
  left: 0;
  top: 0;
  width: 100%;
  /* Full width */
  height: 100%;
  /* Full height */
  overflow: auto;
  /* Enable scroll if needed */
  background-color: rgb(0, 0, 0);
  /* Fallback color */
  background-color: rgba(0, 0, 0, 0.9);
  /* Black w/ opacity */
}

/* Modal Content (image) */
#projects .project-container .project-div .modal-img .project-img-bigger {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
}

/* The Close Button */
#projects .project-container .project-div .modal-img .close {
  cursor: pointer;
  position: absolute;
  top: 15px;
  right: 35px;
  color: #f1f1f1;
  font-size: 60px;
  font-weight: bold;
  transition: 0.3s;
}

/* Caption of Modal Image */
#projects .project-container .project-div .modal-img .caption {
  margin: auto;
  display: block;
  width: 80%;
  max-width: 700px;
  text-align: center;
  color: #ccc;
  padding: 20px 0;
  height: 150px;
}
#projects .project-container .project-div .modal-img .caption span {
  font-size: 2.9rem;
}


/* Add Animation */
#projects .project-container .project-div .modal-img .project-img-bigger,
#projects .project-container .project-div .modal-img .caption {
  -webkit-animation-name: zoom;
  -webkit-animation-duration: 0.6s;
  animation-name: zoom;
  animation-duration: 0.6s;
}

@-webkit-keyframes zoom {
  from {
    -webkit-transform: scale(0)
  }
  to {
    -webkit-transform: scale(1)
  }
}

@keyframes zoom {
  from {
    transform: scale(0.1)
  }
  to {
    transform: scale(1)
  }
}



#projects .project-container .project-div h3,
#projects .project-container .project-div p {
  margin-bottom: 20px;
}

#projects .project-container .project-div p {
  font-size: 1.9rem;
}

#projects .project-container .project-div a {
  display: inline-block;
  font-size: 1.7rem;
  outline: none;
  padding: 10px;
  text-decoration: none;
  text-transform: uppercase;
  background-color: #42189a;
  font-weight: bold;
  border: none;
  border-radius: 8px;
}

#projects .project-container .project-div a:visited,
#projects .project-container .project-div a:link {
  color: white;
}

#projects .project-container .project-div a:hover,
#projects .project-container .project-div a:focus {
  background-color: #5e1fd9;
  transition: 0.5s;
}


/* About Me Section */
/* Skills Section */
#skills ul {
  list-style: none;
  text-align: center;
}

.skill-card_container {
  display: flex;
  justify-content: space-between;
  flex-flow: row wrap;
  gap: 20px;
}

.skill-card {
  flex: 1 100px;
  padding: 20px;
  background-color: #FFF;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
  cursor: pointer;
}

.skill-card:hover {
  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
}
.skill-card:hover .skill-card__header {
  height: 40px;
}
.skill-card:hover .skill-card__icon {
  transform: translateX(-50%) translateY(-50%) scale(3);
}
.skill-card:hover .skill-card__body {
  height: 195px;
}
.skill-card:hover .skill-card__knowledge li {
  transform: translateX(0);
  transition-timing-function: cubic-bezier(0, 1.5, 1, 1);
  transition-duration: .5s;
}

.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(1) {
  transition-delay: 0.25s;
}
.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(2) {
  transition-delay: 0.5s;
}
.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(3) {
  transition-delay: 0.75s;
}
.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(4) {
  transition-delay: 1s;
}
.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(5) {
  transition-delay: 1.25s;
}
.skill-card:hover .skill-card__body .skill-card__knowledge li:nth-child(6) {
  transition-delay: 1.5s;
}

.skill-card__header {
  position: relative;
  height: 200px;
  margin: -20px -20px 0 -20px;
  transition: height .5s;
  overflow: hidden;
}

.skill-card__header.card__html {
  background-color: #ef652a;
}

.skill-card__header.card__css {
  background-color: #2965f1;
}

.skill-card__header.card__js {
  background-color: #f0be25;
}

.skill-card__header .skill-card__icon {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translateY(-50%) translateX(-50%);
  display: block;
  width: 128px;
  height: 128px;
  transition: transform .5s;
}

.skill-card__body {
  height: 40px;
  transition: height .5s;
  overflow: hidden;
}

.skill-card__body .skill-card__title {
  font-size: 1.4em;
  font-weight: 600;
  text-transform: uppercase;
  color: black;
}

.skill-card__body .skill-card__duration {
  color: #9E9E9E;
  font-style: italic;
}

.skill-card__body .skill-card__knowledge {
  color: #424242;
}

.skill-card__body .skill-card__knowledge li {
  margin-top: 5px;
  transition-duration: 0;
  transition-delay: .5s;
  transform: translateX(-100%);
}


/* Footer Layout */
footer {
  background-color: black;
  padding: 20px;
  margin-top: 30px;
  text-align: center;
}

footer .footer-message {
  margin-bottom: 10px;
}

footer .footer-socials ul {
  display: flex;
  justify-content: center;
  list-style: none;
  gap: 20px;
}

footer .footer-socials a:visited, 
footer .footer-socials a:link, 
footer .footer-socials a:focus {
  color: white;
}

footer .footer-socials i.fa-linkedin {
  border-radius: 3px;
  background-color: #0a66c2;
  padding: 5px;
}

/* Media Query */
@media screen and (min-width: 1024px) {
  header,
  main section {
    max-width: 1000px;
  }
  
  header,
  header nav ul {
    display: flex;
  }

  header {
    margin-top: 50px;
    justify-content: space-between;
  }

  main section {
    margin-bottom: 72px;
  }

  header li {
    margin-right: 25px;
  }

  header li:last-of-type {
    margin-right: 0;
  }

  header a.logo {
    padding: 0px;
  }

  header a {
    padding: 7px;
  }

  header a:link, 
  header a:visited, 
  header a:focus {
    border-bottom: none;
  }

}

